LPA-1772 spacing fixes

--- a/service-front/assets/sass/patterns/_accordion.scss
+++ b/service-front/assets/sass/patterns/_accordion.scss
@@ -17,6 +17,7 @@
 }
 
 .accordion-info {
+    @extend %contain-floats;
     margin-bottom: $gutter;
     border-bottom: 1px solid $border-colour;
 }
